Item9007: aparently xhtml (which is still what we specify we're using) requires method=post in lowercase
git-svn-id: http://svn.foswiki.org/trunk@7377 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -64,7 +64,7 @@
 <div class="foswikiLeft">
 <a href="%SCRIPTURLPATH{"view"}%/%WEB%/%HOMETOPIC%">%WEB%</a> &gt; %META{"parent" nowebhome="on" suffix=" &gt;"}% <b>%TOPIC%</b> %TMPL:P{"titleaction"}%</div>
 <div class="foswikiRight foswikiSmall">%WIKITOOLNAME% webs: %WIKIWEBLIST% &nbsp; %TMPL:P{"login"}%</div><br class="foswikiClear" /></div>
-<form name="main" action="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%" method="POST">
+<form name="main" action="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%" method="post">
 %TMPL:P{"webaction"}%</form></div>%TMPL:END%
 
 %TMPL:DEF{"simpleheader"}%
