--- a/core/templates/more.tmpl
+++ b/core/templates/more.tmpl
@@ -11,7 +11,7 @@
 
 
 %TMPL:DEF{"settings"}%---++ %MAKETEXT{"Edit topic preference settings"}%
-   * <form action="%SCRIPTURLPATH{"manage"}%/%WEB%/%TOPIC%" method="POST"><input type="submit" value="%MAKETEXT{"Edit settings for this topic"}%" class='foswikiButton'/> <input type="hidden" name="action" value="editSettings" /></form>
+   * <form action="%SCRIPTURLPATH{"manage"}%/%WEB%/%TOPIC%" method="post"><input type="submit" value="%MAKETEXT{"Edit settings for this topic"}%" class='foswikiButton'/> <input type="hidden" name="action" value="editSettings" /></form>
 %TMPL:END%
 
 
@@ -60,7 +60,7 @@
 
 %TMPL:DEF{"setparent"}%#SetParent
 ---++ %MAKETEXT{"Set new topic parent"}%
-<form name="main" action="%SCRIPTURLPATH{"save"}%/%WEB%/%TOPIC%?action_save=1" method="POST">
+<form name="main" action="%SCRIPTURLPATH{"save"}%/%WEB%/%TOPIC%?action_save=1" method="post">
 <div class="foswikiFormSteps">
 <div class="foswikiFormStep">
 ---++!! %MAKETEXT{"Current parent:"}% %IF{"'NONE%SEARCH{ "^%TOPIC%$" casesensitive="on" scope="topic" regex="on" nosearch="on" nototal="on" format="$parent" }%'='NONE'" then="(none)" else='%SEARCH{ "name = '%TOPIC%'" scope="topic" type="query" nosearch="on" nototal="on" format="[[$parent]]" }%' }%
