--- a/PatternSkin/templates/formtables.pattern.tmpl
+++ b/PatternSkin/templates/formtables.pattern.tmpl
@@ -2,7 +2,7 @@
 
 
 %{ Start of form table }%
-%TMPL:DEF{FORM:display:header}%<div class="foswikiForm">%IF{"context preview" then="%TMPL:P{FORM:display:titlename}%" else="%TMPL:P{FORM:display:titlelink}%"}%<table class='foswikiFormTable' border='1'>%TMPL:P{FORM:display:header:headerrow}%%TMPL:END%
+%TMPL:DEF{FORM:display:header}%<div class="foswikiForm">%IF{"context preview" then="%TMPL:P{FORM:display:titlename}%" else="%TMPL:P{FORM:display:titlelink}%"}%<table class='foswikiFormTable' border='1' summary='data form table'>%TMPL:P{FORM:display:header:headerrow}%%TMPL:END%
 
 
 %{ Header }%
