--- a/core/templates/formtables.tmpl
+++ b/core/templates/formtables.tmpl
@@ -3,7 +3,7 @@
 %{ Header definition for topic attachments and top table in attach screen }%
 %TMPL:DEF{FORM:display:header}%
 <div class="foswikiForm">
-<table class='foswikiFormTable' border='1'><tr><th class='foswikiFormTableHRow foswikiFirstCol' colspan='2'>%IF{"context preview" then="%TMPL:P{FORM:display:titlename}%" else="%TMPL:P{FORM:display:titlelink}%"}% </th></tr>%TMPL:END%
+<table class='foswikiFormTable' border='1' summary='data for table'><tr><th class='foswikiFormTableHRow foswikiFirstCol' colspan='2'>%IF{"context preview" then="%TMPL:P{FORM:display:titlename}%" else="%TMPL:P{FORM:display:titlelink}%"}% </th></tr>%TMPL:END%
 
 %{ Each row }%
 %TMPL:DEF{FORM:display:row}%%IF{"context preview" then="<noautolink>"}%<tr valign='top'><td class='foswikiFormTableRow foswikiFirstCol' align='right'> %A_TITLE%</td><td> %A_VALUE% </td></tr>%IF{"context preview" then="</noautolink>"}%%TMPL:END%
