--- a/core/templates/searchbookview.tmpl
+++ b/core/templates/searchbookview.tmpl
@@ -4,7 +4,7 @@
 %TMPL:DEF{"titleaction"}%%MAKETEXT{"(book view)"}% %TMPL:END%
 
 %TMPL:DEF{SEARCH:format}%
-%REPEAT%<table width="100%" border="0" cellspacing="0" cellpadding="0">
+%REPEAT%<table width="100%" border="0" cellspacing="0" cellpadding="0" summary="">
 <tr bgcolor="%WEBBGCOLOR%">
   <td width="60%"><h1><a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPICNAME%">%TOPICNAME%</a> &nbsp;</h1></td>
   <td width="20%"><a href="%SCRIPTURLPATH{"rdiff"}%/%WEB%/%TOPICNAME%" rel='nofollow'>%TIME%</a> - %REVISION% &nbsp;</td>
