--- a/core/templates/searchformat.tmpl
+++ b/core/templates/searchformat.tmpl
@@ -1,6 +1,6 @@
 %{ This is a default template }%
 
-%TMPL:DEF{"SEARCH:header"}%<h4 class="foswikiSearchResultsHeader" %TMPL:P{"header:style:backgroundcolor"}%>%TMPL:P{"header:text"}%</h4>%TMPL:END%
+%TMPL:DEF{SEARCH:header}%<h4 class="foswikiSearchResultsHeader" %TMPL:P{"header:style:backgroundcolor"}%>%TMPL:P{"header:text"}%</h4>%TMPL:END%
 
 %TMPL:DEF{SEARCH:format}%%TMPL:END%
 %TMPL:DEF{SEARCH:footer}%%TMPL:END%
