Item8846: remove the TMPL:EOF marker
git-svn-id: http://svn.foswiki.org/trunk@7394 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -130,11 +130,5 @@
 }%%TMPL:END%
 
 %{ the bit that controls the output _MUST_ be last in the foswiki.SKIN.tmpl file. }%
-%TMPL:P{"htmldoctype"}%%TMPL:P{"head"}%%TMPL:P{"bodystart"}%%TMPL:P{"main"}%%TMPL:P{"bodyend"}%%TMPL:EOF%
-
-
-
-
-
-
+%TMPL:P{"htmldoctype"}%%TMPL:P{"head"}%%TMPL:P{"bodystart"}%%TMPL:P{"main"}%%TMPL:P{"bodyend"}%
 
