--- a/PatternSkin/templates/login.pattern.tmpl
+++ b/PatternSkin/templates/login.pattern.tmpl
@@ -3,6 +3,7 @@
 %TMPL:DEF{"bodyclassname"}%patternNoViewPage patternLoginPage%TMPL:END%
 
 %TMPL:DEF{"bottombarcontents"}%%TMPL:END%
+%TMPL:DEF{"webaction"}%%TMPL:END%
 
 %TMPL:DEF{"form"}%<div id="foswikiLogin">
 <div class="foswikiFormSteps">%TMPL:P{"formstart"}%%TMPL:P{"titlestep"}%
