Item8840: color tweak for action links border
git-svn-id: http://svn.foswiki.org/trunk@7427 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkinTheme/colors.css
+++ b/PatternSkin/pub/System/PatternSkinTheme/colors.css
@@ -367,7 +367,7 @@ a:hover .foswikiAccessKey {
    border-color:transparent;
 }
 .foswikiSeparator {
-   color:#aaa;
+   color:#ccc;
 }
 .foswikiHorizontalList ul li {
 	border-color:#aaa;
@@ -419,7 +419,7 @@ a:hover .foswikiAccessKey {
 .patternTopicActions {
    background-color:#eaf5fb;
    color:#000;
-   border-color:#6aadd0;
+   border-color:#dfdfdf;
 }
 .patternTopicAction {
    border-color:#fff;
