Item9024: fix mistake
git-svn-id: http://svn.foswiki.org/trunk@7458 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/templates/view.pattern.tmpl
+++ b/PatternSkin/templates/view.pattern.tmpl
@@ -34,7 +34,7 @@
 
 %TMPL:DEF{"breadcrumb:parents"}%%META{"parent" nowebhome="on" prefix="%TMPL:P{"breadcrumb:separator"}%" separator="%TMPL:P{"breadcrumb:separator"}%" suffix=""}%%TMPL:END%
 
-%TMPL:DEF{"breadcrumb:topic"}%[[%TOPIC%][<nop>%TOPIC%]]%TMPL:END%
+%TMPL:DEF{"breadcrumb:topic"}%%TOPIC%%TMPL:END%
 
 %TMPL:DEF{"breadcrumb:title"}%<span class="patternHomePathTitle">%MAKETEXT{"You are here:"}% </span>%TMPL:END%
 
