Item9025: Username is blank when login template is re-displayed after login failure
git-svn-id: http://svn.foswiki.org/trunk@7479 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/login.tmpl
+++ b/core/templates/login.tmpl
@@ -5,7 +5,7 @@
 %TMPL:DEF{"LOG_IN_BANNER"}%%TMPL:END%
 %TMPL:DEF{"LOGGED_IN_BANNER"}%%MAKETEXT{"[_1] is currently logged in" args="%USERSWEB%.%WIKINAME%"}%%TMPL:END%
 %TMPL:DEF{"NEW_USER_NOTE"}%%MAKETEXT{"Enter a new username and password to change identity"}%%TMPL:END%
-%TMPL:DEF{"UNRECOGNISED_USER"}%%MAKETEXT{"Oops: we could not recognize you. Try again or [[[_1]][reset your password]]." args="%SYSTEMWEB%.ResetPassword"}%%TMPL:END%
+%TMPL:DEF{"UNRECOGNISED_USER"}%%MAKETEXT{"Oops: we could not recognize you. Try again or [[[_1]][reset your password]]." args="%SCRIPTURLPATH{view}%/%SYSTEMWEB%/ResetPassword?username=%URLPARAM{usernamestep}%"}%%TMPL:END%
 
 %TMPL:DEF{"titleaction"}%%MAKETEXT{"([_1] login)" args="<nop>%WIKITOOLNAME%"}%%TMPL:END%
 
@@ -60,7 +60,7 @@
 %TMPL:P{"passwordfieldnoteremember"}%
 </div><!-- /foswikiFormStep-->%TMPL:END%
 
-%TMPL:DEF{"passwordnote"}%<span class="foswikiUnvisited">[[%SYSTEMWEB%.ResetPassword][%MAKETEXT{"I forgot my password"}%]]</span>%TMPL:END%
+%TMPL:DEF{"passwordnote"}%<span class="foswikiUnvisited">[[%SCRIPTURLPATH{view}%/%SYSTEMWEB%/ResetPassword?username=%URLPARAM{usernamestep}%][%MAKETEXT{"I forgot my password"}%]]</span>%TMPL:END%
 
 %TMPL:DEF{"rememberbox"}%%BR%<input tabindex='3' id="remember" name="remember" type="checkbox" value="1" /><label for="remember">&nbsp;%MAKETEXT{"Remember me on this computer"}%</label>%TMPL:END%
 
