Item9007: HTMLValidation found an extra </p>
git-svn-id: http://svn.foswiki.org/trunk@7492 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/renamebase.tmpl
+++ b/core/templates/renamebase.tmpl
@@ -30,7 +30,7 @@
 
 %TMPL:DEF{"totopic"}%
 %TMPL:P{"totopictitle"}%
-<p>%TMPL:P{"newtopic"}%%TMPL:P{"newtopichelp"}%</p>%TMPL:END%
+<p>%TMPL:P{"newtopic"}%%TMPL:P{"newtopichelp"}%%TMPL:END%
 
 %TMPL:DEF{"toattachmenttitle"}%---+++ %MAKETEXT{"To attachment:"}% %TMPL:END%
 
