Item9007: Fix PatternSkin + TinyMCEPlugin edit validation
Merge branch 'master' of github.com:csirac2/foswiki into Item9007


git-svn-id: http://svn.foswiki.org/trunk@7499 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkinTheme/style.css
+++ b/PatternSkin/pub/System/PatternSkinTheme/style.css
@@ -967,6 +967,11 @@ h4.foswikiSearchResultsHeader {
 
 /* edit.pattern.tmpl */
 
+#edithelphide a span,
+#edithelpshow a span {
+	font-size:1.1em;
+}
+
 .patternNoViewPage #patternMainContents {
 	padding-top:0;
 }
