--- a/PatternSkin/pub/System/PatternSkinTheme2009/style.css
+++ b/PatternSkin/pub/System/PatternSkinTheme2009/style.css
@@ -996,6 +996,11 @@ h4.patternSearchResultsHeader {
 
 /* edit.pattern.tmpl */
 
+#edithelphide a span,
+#edithelpshow a span {
+        font-size:1.1em;
+}
+
 .patternNoViewPage #patternMainContents {
 	padding-top:0;
 }
