Item9007: Validation issues, added test coverage for attachments
Use MAKETEXT for table summary attributes

git-svn-id: http://svn.foswiki.org/trunk@7502 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/HistoryPlugin/templates/oopshistory.tmpl
+++ b/HistoryPlugin/templates/oopshistory.tmpl
@@ -30,7 +30,7 @@ This version is tested with TWiki 4.2.0 and 4.1.2 and Foswiki in IE6, IE7 and FF
 %TMPL:DEF{"historytable"}%%TMPL:P{context="RevCommentPluginEnabled" then="historytable_rcp_enabled" else="historytable_rcp_disabled"}%%TMPL:END%
 
 
-%TMPL:DEF{"historytable_rcp_enabled"}%<table class="historySelectTable" border="0" cellspacing="0" cellpadding="5">
+%TMPL:DEF{"historytable_rcp_enabled"}%<table class="historySelectTable" border="0" cellspacing="0" cellpadding="5" summary="%MAKETEXT{"Topic history"}%">
 <tr>
 <th colspan="3">%MAKETEXT{"Revision"}%</th>
 <th>%MAKETEXT{"Date"}%</th>
@@ -41,7 +41,7 @@ This version is tested with TWiki 4.2.0 and 4.1.2 and Foswiki in IE6, IE7 and FF
 </table>%TMPL:END%
 
 
-%TMPL:DEF{"historytable_rcp_disabled"}%<table class="historySelectTable" border="0" cellspacing="0" cellpadding="5" summary="">
+%TMPL:DEF{"historytable_rcp_disabled"}%<table class="historySelectTable" border="0" cellspacing="0" cellpadding="5" summary="%MAKETEXT{"Topic history"}%">
 <tr>
 <th colspan="3">%MAKETEXT{"Revision"}%</th>
 <th>%MAKETEXT{"Date"}%</th>
