--- a/MailerContrib/templates/mailnotify.tmpl
+++ b/MailerContrib/templates/mailnotify.tmpl
@@ -8,7 +8,7 @@
 <p>
 <em>%MAKETEXT{"New or changed topics in [_1], since [_2]:" args="%WIKITOOLNAME%.%WEB%,%LASTDATE%"}%</em>
 </p>
-<table width="100%" border="0" cellpadding="0" cellspacing="4" summary="">
+<table width="100%" border="0" cellpadding="0" cellspacing="4" summary="%MAKETEXT{"Changes"}%">
 <tr bgcolor="#B9DAFF">
   <td width="50%">
     <b>%MAKETEXT{"Topics in [_1] web:" args="<nop>%WEB%"}%</b>
