--- a/core/templates/attach.tmpl
+++ b/core/templates/attach.tmpl
@@ -6,7 +6,7 @@
 
 %TMPL:DEF{"attachform"}%%TMPL:P{"attachformstart"}%%TMPL:P{"newfile"}%%TMPL:P{"comment"}%%TMPL:P{"properties"}%%TMPL:P{"hiddenfields"}%%TMPL:P{"attachformend"}%%TMPL:END%
 
-%TMPL:DEF{"attachformstart"}%<table width="100%" summary="">%TMPL:END%
+%TMPL:DEF{"attachformstart"}%<table width="100%" summary="%MAKETEXT{"Attach a file"}%">%TMPL:END%
 
 %TMPL:DEF{"attachformend"}%</table>%TMPL:END%
 
