--- a/core/templates/rdiff.tmpl
+++ b/core/templates/rdiff.tmpl
@@ -11,7 +11,7 @@
 
 %TMPL:DEF{"searchbody"}%%TMPL:P{"repeatedsearchblock"}%%TMPL:END%
 
-%TMPL:DEF{"repeatedsearchblock"}%%REPEAT%<table width="100%" border="3" cellpadding="0" cellspacing="0" summary="">
+%TMPL:DEF{"repeatedsearchblock"}%%REPEAT%<table width="100%" border="3" cellpadding="0" cellspacing="0" summary="%MAKETEXT{"Difference Topic"}%">
   <tr bgcolor="%WEBBGCOLOR%">
     <td width="99%">
       &nbsp;<tt><b>&lt;&lt;O&gt;&gt;</b></tt>&nbsp; Difference Topic
