--- a/core/templates/renamebase.tmpl
+++ b/core/templates/renamebase.tmpl
@@ -30,7 +30,7 @@
 
 %TMPL:DEF{"totopic"}%
 %TMPL:P{"totopictitle"}%
-<p>%TMPL:P{"newtopic"}%%TMPL:P{"newtopichelp"}%%TMPL:END%
+%TMPL:P{"newtopic"}%%TMPL:P{"newtopichelp"}%%TMPL:END%
 
 %TMPL:DEF{"toattachmenttitle"}%---+++ %MAKETEXT{"To attachment:"}% %TMPL:END%
 
