Item9007: Fix attach and rdiff template validation
git-svn-id: http://svn.foswiki.org/trunk@7503 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkinTheme2009/style.css
+++ b/PatternSkin/pub/System/PatternSkinTheme2009/style.css
@@ -427,6 +427,7 @@ table.foswikiFormTable th.foswikiFormTableHRow a:visited {
 	padding:.1em .2em;
 }
 .patternAttachmentHeader {
+        font-size: 1.1em;
 	/* behaviour class */
 }
 .foswikiForm h3 a:link,
