Item9007: ... forgot to apply to the 2009 theme
git-svn-id: http://svn.foswiki.org/trunk@7506 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkinTheme2009/style.css
+++ b/PatternSkin/pub/System/PatternSkinTheme2009/style.css
@@ -905,6 +905,10 @@ html>body #patternSideBarContents li { /* Mozilla */
 	/* no longer used in search.pattern.tmpl, but remains in rename templates */
 	margin:0 0 1em 0;
 }
+#renamehelpshow a span,
+#renamehelphide a span {
+        font-size: 1.1em; 
+}
 .patternSearchResults blockquote {
 	margin:1em 0 1em 5em;
 }
