--- a/core/templates/attachtables.tmpl
+++ b/core/templates/attachtables.tmpl
@@ -12,12 +12,8 @@
 %TMPL:DEF{ATTACH:files:row(basic)}%| %A_ICON%<span class="foswikiHidden">%A_EXT%</span> | <a href="%ATTACHURLPATH%/%ENCODE{%A_FILE%}%"><noautolink>%A_FILE%</noautolink></a> | <a href="%SCRIPTURLPATH{"attach"}%/%WEB%/%TOPIC%?filename=%ENCODE{"%A_FILE%"}%;revInfo=1" title="%MAKETEXT{"change, update, previous revisions, move, delete..."}%" rel="nofollow">%MAKETEXT{"manage"}%</a> |  %A_SIZE%|<span class="foswikiNoBreak">%A_DATE%</span> |%A_USER%  |%A_COMMENT%  |%TMPL:END%
 
 %{ Header for topic attachment table }%
-%TMPL:DEF{ATTACH:files:header}%%TMPL:P{
-   context="TablePluginEnabled"
-   then="ATTACH:tablemacro"
-   ATMATTRIBUTES=""
-   ATMCAPTION=""
-   ATMSUMMARY="%MAKETEXT{"Attachments"}%"
+%TMPL:DEF{ATTACH:files:header}%%TMPL:P{"settmltablesummary" 
+   SUMMARY="%MAKETEXT{"Attachments"}%"
 }%%TMPL:P{ATTACH:files:header(basic)}%
 %TMPL:END%
 
@@ -29,12 +25,8 @@
 %TMPL:DEF{ATTACH:files:footer}%</div>%TMPL:END%
 
 %{ Header for table at top of attach screen }%
-%TMPL:DEF{ATTACH:files:header:A}%%TMPL:P{
-   context="TablePluginEnabled"
-   then="ATTACH:tablemacro"
-   ATMATTRIBUTES=""
-   ATMCAPTION=""
-   ATMSUMMARY="%MAKETEXT{"Attachments"}%"
+%TMPL:DEF{ATTACH:files:header:A}%%TMPL:P{"settmltablesummary"
+   SUMMARY="%MAKETEXT{"Attachments"}%"
 }%%TMPL:P{ATTACH:files:header(basic)}% *%MAKETEXT{"Attribute"}%* |
 %TMPL:END%
 
@@ -46,12 +38,8 @@
 %TMPL:DEF{ATTACH:files:footer:A}%</div>%TMPL:END%
 
 %{ Header for versions table in attach screen }%
-%TMPL:DEF{ATTACH:versions:header}%TMPL:P{
-   context="TablePluginEnabled"
-   then="ATTACH:tablemacro"
-   ATMATTRIBUTES=""
-   ATMCAPTION=""
-   ATMSUMMARY="%MAKETEXT{"Attachment history"}%"
+%TMPL:DEF{ATTACH:versions:header}%%TMPL:P{"settmltablesummary"
+   SUMMARY="%MAKETEXT{"Attachment history"}%"
 }%|  *%MAKETEXT{"Version"}%*  |  *%MAKETEXT{"Action"}%*   |  *%MAKETEXT{"Date"}%*  |  *%MAKETEXT{"Who"}%*  |  *%MAKETEXT{"Comment"}%*  |
 %TMPL:END%
 
@@ -63,5 +51,15 @@
 %{ Footer for versions table in attach screen }%
 %TMPL:DEF{ATTACH:versions:footer}%%TMPL:END%
 
-%TMPL:DEF{ATTACH:tablemacro}%%TABLE{%ATMATTRIBUTES% summary="%ATMSUMMARY%" caption="%ATMCAPTION%"}%"}%
-%TMPL:END%
+%{ Content accessibility guidelines require a summary attribute on tables. If
+   TablePlugin is enabled, use TABLE macro to set it for the following TML table
+}%
+
+%TMPL:DEF{"settmltablesummary:tablemacro"}%%TABLE{summary="%SUMMARY%"}%%TMPL:END%
+
+%TMPL:DEF{"settmltablesummary"}%%TMPL:P{
+   context="TablePluginEnabled"
+   then="settmltablesummary:tablemacro"
+   SUMMARY="%SUMMARY%"
+}%%TMPL:END%
+
