Item9052: add code to remove newlines after TMPL comments - if you have 12 lines each a seperate %{ comment }%, you would receive 12 newlines - or 11<p />'s, remove extra newlines after TMPL:INCLUDES - these sometimes lead to an extra linefeed _before_ the <html> tag, and if they are after TMPL:INCLUDE{foswiki} lead to newlines after the </html>, add a little more detail to the debug output, so you can clearly see the begin and end of the TMPL TRACE, and also what files the newlines come from.
git-svn-id: http://svn.foswiki.org/trunk@7530 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -132,5 +132,6 @@ var foswiki = {preferences: {
   else="$percntTMPL:P{\"defaultwebtopiclist\"}$percnt"
 }%%TMPL:END%
 
-%{ the bit that controls the output _MUST_ be last in the foswiki.SKIN.tmpl file. }%
+%{ the bit that controls the output _SHOULD_ be last in the foswiki.SKIN.tmpl file. }%
 %TMPL:P{"htmldoctype"}%%TMPL:P{"head"}%%TMPL:P{"bodystart"}%%TMPL:P{"main"}%%TMPL:P{"bodyend"}%
+%{ REQUIRED: comment after output definition to filter out newlines }%
