Item9052: remove more newlines after TMPL:INCLUDE, and add status 200 for successful completion of changes script
git-svn-id: http://svn.foswiki.org/trunk@7532 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/changes.tmpl
+++ b/core/templates/changes.tmpl
@@ -1,15 +1,8 @@
-%{ This is a default template }%%TMPL:INCLUDE{"view"}%
-%TMPL:INCLUDE{"search"}%
-
+%{ This is a default template }%%TMPL:INCLUDE{"view"}%%TMPL:INCLUDE{"search"}%
 %TMPL:DEF{"titleaction"}%%MAKETEXT{"(changes)"}% %TMPL:END%
-
-
 %TMPL:DEF{"topicactionbuttons"}% Subscribe or unsubscribe in %NOTIFYTOPIC% %TMPL:END%
-
-%TMPL:P{"topicinfo"}%%TMPL:END%
-
+%TMPL:DEF{"topicinfo"}%%TMPL:END%
 %TMPL:DEF{CHANGES:header}%%TMPL:P{SEARCH:header}%%TMPL:END%
 %TMPL:DEF{CHANGES:format}%%TMPL:P{SEARCH:format}%%TMPL:END%
 %TMPL:DEF{CHANGES:footer}%%TMPL:P{SEARCH:footer}%%TMPL:END%
-
-%TMPL:DEF{"content"}%%TMPL:P{CHANGES:header}%%TEXT%%TMPL:P{CHANGES:footer}%%TMPL:END% 
+%TMPL:DEF{"content"}%%TMPL:P{CHANGES:header}%%TEXT%%TMPL:P{CHANGES:footer}%
