Item9052: fixed up some default templates that had junk on their rears. Moved the template comment processing so that it applies immediately a template file is read; this means that comments cannot span two template files (which is an incredibly bad idea anyway) but it does mean we can remove comments in a more sensible way, as well as taking out the whitespace to either side as per Sven's recent change. This changes the spec of template comments, but not in a way that should damage any existing templates. Documented the change to template comments.
git-svn-id: http://svn.foswiki.org/trunk@7540 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/attachtables.tmpl
+++ b/core/templates/attachtables.tmpl
@@ -55,7 +55,8 @@
    TablePlugin is enabled, use TABLE macro to set it for the following TML table
 }%
 
-%TMPL:DEF{"settmltablesummary:tablemacro"}%%TABLE{summary="%SUMMARY%"}%%TMPL:END%
+%TMPL:DEF{"settmltablesummary:tablemacro"}%%TABLE{summary="%SUMMARY%"}%
+%TMPL:END%
 
 %TMPL:DEF{"settmltablesummary"}%%TMPL:P{
    context="TablePluginEnabled"
