--- a/core/templates/view.tmpl
+++ b/core/templates/view.tmpl
@@ -1,8 +1,7 @@
 %{ This is a default template }%%TMPL:INCLUDE{"foswiki"}%
+%TMPL:INCLUDE{"viewtopicactionbuttons"}%%{
 
-%TMPL:INCLUDE{"viewtopicactionbuttons"}%
-
-%TMPL:DEF{"titleaction"}% %REVTITLE% %TMPL:END%
+}%%TMPL:DEF{"titleaction"}% %REVTITLE% %TMPL:END%
 %TMPL:DEF{"webaction"}% %TMPL:P{"webtopiclist"}% %TMPL:END%
 %TMPL:DEF{"pagetitlestylewrapper"}%%TMPL:END%
 
