Item8924:    * removed pointless TOGGLE module    * reworked handling of =meta= tags by merging =foswikilibs.js= with =jquery.foswiki= module    * fixed IE7 error with floats inside tabpanes    * added ajax handler to query foswiki preferences async-ly
git-svn-id: http://svn.foswiki.org/trunk@7578 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/treeview/jquery.treeview.uncompressed.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/treeview/jquery.treeview.uncompressed.css
@@ -130,6 +130,6 @@
 .treeview .open .placeholder {
   display:none;
 }
-.treeview .open .placeholder {
-  display:none;
+.treeview .open .closed .placeholder {
+  display:block;
 }
