Item9076: fixed jquery twisties on pattern
git-svn-id: http://svn.foswiki.org/trunk@7580 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/TwistyPlugin/templates/twistyplugin.jquery.tmpl
+++ b/TwistyPlugin/templates/twistyplugin.jquery.tmpl
@@ -1,7 +1,8 @@
 %TMPL:INCLUDE{twistyplugin}%
 %TMPL:DEF{twisty:header:js}%
-%ADDTOHEAD{
-  "TWISTYPLUGIN::JS"
+%ADDTOZONE{
+  "body"
+  tag="TWISTYPLUGIN::JS"
   text="
 <script type='text/javascript' src='%PUBURLPATH%/%SYSTEMWEB%/TwistyPlugin/twisty.jquery.js'></script>
 <script type='text/javascript' src='%PUBURL%/%SYSTEMWEB%/JavascriptFiles/foswikiPref.js'></script>
