Item8924: added documentatiopn on how to extend the list of preferences exported to JS; changed the name of the preferences to something more intention-revealing than PREFS2JS
git-svn-id: http://svn.foswiki.org/trunk@7582 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -17,7 +17,7 @@
 
 %TMPL:DEF{"script:preferences"}%<script type="text/javascript">
 var foswiki = {preferences: {
-%FOREACH{"%PREFS2JS%" format="$topic:\"$percnt$topic$percnt\"" separator=","}%}};</script>
+%FOREACH{"%EXPORTEDPREFERENCES%" format="$topic:\"$percnt$topic$percnt\"" separator=","}%}};</script>
 %TMPL:END%
 
 %TMPL:DEF{"script"}%%TMPL:P{"script:preferences"}%%TMPL:P{"script:skinbase"}%%TMPL:P{"script:skintemplate"}%%TMPL:P{"script:topictemplate"}%%TMPL:END%
