--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -122,6 +122,10 @@
 ---+++ %MAKETEXT{"[_1] does is not a valid value for the [_2] parameter" args="'%PARAM1%','%PARAM2%'"}%
 %MAKETEXT{"Either the name is invalid, or it refers to a non-existant topic."}%
 %TMPL:END%
+%TMPL:DEF{"invalid_form_name"}%
+---+++ %MAKETEXT{"[_1] is not a valid form name" args="'%PARAM1%'"}%
+%MAKETEXT{"Either the name is invalid, or it refers to a non-existant form."}%
+%TMPL:END%
 %TMPL:DEF{"web_exists"}%
 ---+++ %MAKETEXT{"Cannot create web [_1] because it already exists" args="\"%PARAM1%\""}%
 %MAKETEXT{"Please go back in your browser and try again."}%
