--- a/PatternSkin/templates/foswiki.pattern.tmpl
+++ b/PatternSkin/templates/foswiki.pattern.tmpl
@@ -39,6 +39,7 @@
 <meta name="TEXT_NUM_TOPICS" content="%MAKETEXT{"Number of topics:"}%" />
 <meta name="TEXT_MODIFY_SEARCH" content="%MAKETEXT{"Modify search"}%" />
 <meta name="robots" content="noindex" />%HTTP_EQUIV_ON_VIEW%
+%TMPL:P{"meta:preferences"}%
 <base href="%SCRIPTURL{%SCRIPTNAME%}%/%WEB%/%TOPIC%"></base>
 
 %TMPL:P{"script"}%%TMPL:P{"defaultstyle"}%</head>%TMPL:END%
