Item8924: added URL encoding to values passed via meta to JS. There are two important changes here that need careful consideration. First, because foswiki.PREFERENCE values are now URL encoded, anything that bypasses foswiki.getPreference and uses foswiki.getMetaTag (or similar) to retrieve a preference value from EXPORTEDPREFERENCES needs to decode the value. Second, in order to support this I needed a proper URL encoding, but found that ENCODE doesn't provide one. After some detailed examination of the history of <br> encoding (which stretches back to a checkin in early 2001), I couldn't find any rational reason for it, other than sloppy coding. I have removed it, which means that newlines will now be encoded using the normal URL encoding. There's a chance this may impact a wiki application, but TBH I think it's the lesser of the evils to fix this poisonous legacy now. If people disagree, then the alternative is to add a type=uri that does a proper encoding.
git-svn-id: http://svn.foswiki.org/trunk@7694 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -16,7 +16,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="%LANG%" lang="%LANG%">%TMPL:END%
 
 %TMPL:DEF{"meta:preferences"}%%FOREACH{"%EXPORTEDPREFERENCES%" 
-  format="<meta name='foswiki.$topic' content='$percnt$topic$percnt' />"
+  format="<meta name=\"foswiki.$topic\" content=\"$percntENCODE{\"$percnt$topic$percnt\"}$percnt\" /><!--$topic-->"
   separator="
 "
 }%
