Item1470: "Raw edit" should also change to "Edit WikiText" when editing is not enabled, e.g. when viewing an older revision
git-svn-id: http://svn.foswiki.org/trunk@7752 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/viewtopicactionbuttons.tmpl
+++ b/core/templates/viewtopicactionbuttons.tmpl
@@ -58,7 +58,7 @@
 
 %TMPL:DEF{"activatable_raw_edit"}%%TMPL:P{context="inactive" then="inactive_raw_edit" else="raw_edit"}%%TMPL:END%
 
-%TMPL:DEF{"inactive_raw_edit"}%<span><strike>%MAKETEXT{"Raw edit"}%</strike></span>%TMPL:P{"sep"}%%TMPL:END%
+%TMPL:DEF{"inactive_raw_edit"}%<span><strike>%MAKETEXT{"Edit Wiki<nop>Text"}%</strike></span>%TMPL:P{"sep"}%%TMPL:END%
 
 
 %TMPL:DEF{"active_attach"}%%TMPL:P{"attach_link"}%%TMPL:END%
