--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -119,7 +119,7 @@
 %MAKETEXT{"Please go back in your browser and try again."}%
 %TMPL:END%
 %TMPL:DEF{"invalid_topic_parameter"}%
----+++ %MAKETEXT{"[_1] does is not a valid value for the [_2] parameter" args="'%PARAM1%','%PARAM2%'"}%
+---+++ %MAKETEXT{"[_1] is not a valid value for the [_2] parameter" args="'%PARAM1%','%PARAM2%'"}%
 %MAKETEXT{"Either the name is invalid, or it refers to a non-existant topic."}%
 %TMPL:END%
 %TMPL:DEF{"invalid_form_name"}%
