--- a/core/templates/registerfailednotremoved.tmpl
+++ b/core/templates/registerfailednotremoved.tmpl
@@ -1,13 +1,11 @@
 %{ This is a default template }%From: %WIKIWEBMASTERNAME% <%WIKIWEBMASTER%>
 To: %WIKIWEBMASTERNAME% <%WIKIWEBMASTER%>
-Subject: %MAKETEXT{"[_1] - Registration failure for [_2] ([_3])" args="%WIKITOOLNAME%, %WIKINA
-E%, %EMAILADDRESS%"}%
+Subject: %MAKETEXT{"[_1] - Registration failure for [_2] ([_3])" args="%WIKITOOLNAME%, %WIKINAME%, %EMAILADDRESS%"}%
 MIME-Version: 1.0
 Content-Type: text/plain; charset=%CHARSET%
 Content-Transfer-Encoding: 8bit
 
-%MAKETEXT{"This is an automated e-mail notification of user registration in [_1]." args="%WIKI
-OOLNAME%"}%
+%MAKETEXT{"This is an automated e-mail notification of user registration in [_1]." args="%WIKITOOLNAME%"}%
 
 %MAKETEXT{"[_1] has been registered with e-mail [_2]" args="%WIKINAME%, %EMAILADDRESS%"}%
 
