Item9197: Changes in the =search= template mean that the =view= template is no longer automatically included. Fix by including the =oops= template in the =backlinks= template
git-svn-id: http://svn.foswiki.org/trunk@7949 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/backlinks.tmpl
+++ b/core/templates/backlinks.tmpl
@@ -1,4 +1,4 @@
-%{ This is a default template }%%TMPL:INCLUDE{"search"}%
+%{ This is a default template }%%TMPL:INCLUDE{"oops"}%%TMPL:INCLUDE{"search"}%
 %TMPL:DEF{"searchweb"}%%SEARCH{ search="%TOPIC%([^A-Za-z0-9]|$)|%SPACEOUT{"%TOPIC%" separator=" *"}%([^A-Za-z0-9]|$)|%WEB%.%TOPIC%([^A-Za-z0-9]|$)" type="regex" scope="text" nosearch="on" excludetopic="%TOPIC%" web="%WEB%" }%%TMPL:END%
 
 
