--- a/core/templates/viewtopicactionbuttons.tmpl
+++ b/core/templates/viewtopicactionbuttons.tmpl
@@ -23,11 +23,11 @@
 %TMPL:DEF{"activatable_printable"}%%TMPL:P{"printable"}%%TMPL:END%
 
 
-%TMPL:DEF{"backlinks_web_link"}%<span><a href='%SCRIPTURLPATH{"oops"}%/%WEB%/%TOPIC%?template=backlinksweb' rel='nofollow' %MAKETEXT{"title='Search the [_1] Web for topics that link to here' accesskey='b'>We&b" args="<nop>%WEB%"}%</a></span>%TMPL:END%
+%TMPL:DEF{"backlinks_web_link"}%<span><a href='%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%?template=backlinksweb' rel='nofollow' %MAKETEXT{"title='Search the [_1] Web for topics that link to here' accesskey='b'>We&b" args="<nop>%WEB%"}%</a></span>%TMPL:END%
 
-%TMPL:DEF{"backlinks_all_link"}%<span><a href='%SCRIPTURLPATH{"oops"}%/%WEB%/%TOPIC%?template=backlinksallwebs' rel='nofollow' %MAKETEXT{"title='Search all webs for topics that link to here' accesskey='l'>A&ll Webs"}%</a></span>%TMPL:END%
+%TMPL:DEF{"backlinks_all_link"}%<span><a href='%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%?template=backlinksallwebs' rel='nofollow' %MAKETEXT{"title='Search all webs for topics that link to here' accesskey='l'>A&ll Webs"}%</a></span>%TMPL:END%
 
-%TMPL:DEF{"backlinks_link"}%<span><a href='%SCRIPTURLPATH{"oops"}%/%WEB%/%TOPIC%?template=backlinksweb' rel='nofollow' %MAKETEXT{"title='Search the [_1] Web for topics that link to here' accesskey='b'>&Backlinks" args="<nop>%WEB%"}%</a></span>%TMPL:END%
+%TMPL:DEF{"backlinks_link"}%<span><a href='%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%?template=backlinksweb' rel='nofollow' %MAKETEXT{"title='Search the [_1] Web for topics that link to here' accesskey='b'>&Backlinks" args="<nop>%WEB%"}%</a></span>%TMPL:END%
 
 
 %TMPL:DEF{"history_rdiff_link"}%<span class="foswikiRequiresChangePermission"><a href='%SCRIPTURLPATH{"rdiff"}%/%WEB%/%TOPIC%?type=history' rel='nofollow' %MAKETEXT{"title='View total topic history' accesskey='h'>&History"}%</a></span>%TMPL:END%
