Item9237: Initial checkin for revised save flow.  Formatting needs some help
git-svn-id: http://svn.foswiki.org/trunk@8011 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/templates/feedback.tmpl
+++ b/core/lib/Foswiki/Configure/templates/feedback.tmpl
@@ -1,8 +1,8 @@
 <#-- FEEDABCK TEMPLATE  -->
 
-<#if messageType == 4><div class="foswikiNotification"> Password changed </div></#if>
+<h1>Your updates...</h1>          
 
-<h2>Your updates...</h2>          
+<#if messageType == 4><ul><li>Password changed </ul></#if>
 
 <#if changesList??>
 	<div class='configureChangeList'>
@@ -15,7 +15,4 @@
 </#if>
 
 <h2>Update done!</h2>
-<ul>
-	<li><a href='${frontpageUrl}'>Go to your Foswiki front page</a></li>
-	<li><a href='${configureUrl}'>Return to configuration </a></li>
-</ul>
+Be sure to review all warnings and errors before proceeding.  
