--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/autocomplete/jquery.autocomplete.uncompressed.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/autocomplete/jquery.autocomplete.uncompressed.css
@@ -36,7 +36,7 @@
 }
 
 .ac_loading {
-	background: white url('images/spinner.gif') right center no-repeat;
+	background: white url('../../images/spinner.gif') right center no-repeat;
 }
 
 .ac_odd {
