--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/tabpane/jquery.tabpane.uncompressed.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/tabpane/jquery.tabpane.uncompressed.css
@@ -88,7 +88,7 @@ ul.jqTabGroup li.current a {
 }
 
 .jqAjaxLoader {
-  background: url(spinner.gif) 0 0 no-repeat;
+  background: url(../../images/spinner.gif) 0 0 no-repeat;
   height: 16px;
   width: 16px;
   display: block;
