--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/treeview/jquery.treeview.uncompressed.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/treeview/jquery.treeview.uncompressed.css
@@ -122,7 +122,7 @@
 
 .jqAjaxLoader,
 .treeview .placeholder {
-  background: url(images/spinner.gif) 0 0 no-repeat;
+  background: url(../../images/spinner.gif) 0 0 no-repeat;
   height: 16px;
   width: 16px;
   display: block;
