Item9237: Adjust formatting of update message
git-svn-id: http://svn.foswiki.org/trunk@8014 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/templates/feedback.tmpl
+++ b/core/lib/Foswiki/Configure/templates/feedback.tmpl
@@ -1,6 +1,6 @@
 <#-- FEEDABCK TEMPLATE  -->
 
-<h1>Your updates...</h1>          
+<h3>Your updates...</h3>
 
 <#if messageType == 4><ul><li>Password changed </ul></#if>
 
@@ -13,6 +13,4 @@
 		</table>
 	</div>
 </#if>
-
-<h2>Update done!</h2>
-Be sure to review all warnings and errors before proceeding.  
+<b>Be sure to review all warnings and errors before proceeding.</b>
