Item9281: Get parent using %META to avoid regex issue - pharvey's suggestion
git-svn-id: http://svn.foswiki.org/trunk@8083 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/more.tmpl
+++ b/core/templates/more.tmpl
@@ -63,7 +63,7 @@
 <form name="main" action="%SCRIPTURLPATH{"save"}%/%WEB%/%TOPIC%?action_save=1" method="post">
 <div class="foswikiFormSteps">
 <div class="foswikiFormStep">
----++!! %MAKETEXT{"Current parent:"}% %IF{"'NONE%SEARCH{ "^%TOPIC%$" casesensitive="on" scope="topic" regex="on" nosearch="on" nototal="on" format="$parent" }%'='NONE'" then="(none)" else='%SEARCH{ "name = '%TOPIC%'" scope="topic" type="query" nosearch="on" nototal="on" format="[[$parent]]" }%' }%
+---++!! %MAKETEXT{"Current parent:"}% %IF{"'NONE%META{"parent" dontrecurse="on"}%'='NONE'" then="(none)" else='%SEARCH{ "name = '%TOPIC%'" scope="topic" type="query" nosearch="on" nototal="on" format="[[$parent]]" }%' }%
 </div>
 <div class="foswikiFormStep">
 ---+++!! %MAKETEXT{"Select topic parent:"}%
