Item9287: Edit Settings page does not show topics correctly if they are not perfect wikiwords
git-svn-id: http://svn.foswiki.org/trunk@8089 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/settings.tmpl
+++ b/core/templates/settings.tmpl
@@ -6,7 +6,7 @@
 %TMPL:DEF{"webaction"}%%MAKETEXT{"Preferences for"}%%TMPL:END%
 
 
-%TMPL:DEF{"pagetitle"}%%TMPL:P{"webaction"}% %TOPIC%%TMPL:END%
+%TMPL:DEF{"pagetitle"}%%TMPL:P{"webaction"}% [[%TOPIC%]]%TMPL:END%
 
 
 %TMPL:DEF{"topicactionbuttons"}%<input type="submit" class="foswikiSubmit" name="action" value="Cancel" id="cancel" />%TMPL:P{"sep"}%<input type="submit" class="foswikiSubmit" name="action" value="Update" id="checkpoint" />%TMPL:END%
