Item9287: Edit Settings page does not show topics correctly if they are not perfect wikiwords
git-svn-id: http://svn.foswiki.org/trunk@8090 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/templates/settings.pattern.tmpl
+++ b/PatternSkin/templates/settings.pattern.tmpl
@@ -12,7 +12,7 @@ foswiki.Event.addLoadEvent(initForm);
 %TMPL:DEF{"webaction"}%%MAKETEXT{"Preferences for"}%%TMPL:END%
 
 
-%TMPL:DEF{"pagetitle"}%%TMPL:P{"webaction"}% %TOPIC%%TMPL:END%
+%TMPL:DEF{"pagetitle"}%%TMPL:P{"webaction"}% [[%TOPIC%]]%TMPL:END%
 
 
 %TMPL:DEF{"saveoptions"}%%TMPL:END%
