Item9288: Rename topic does not show topics correctly if they are not perfect wikiwords Watch out for using %TOPIC% in templates. Either escape them or double bracket them. Otherwise I18N and special character topics which have wikiwords in them fail.
git-svn-id: http://svn.foswiki.org/trunk@8091 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/templates/renamebase.pattern.tmpl
+++ b/PatternSkin/templates/renamebase.pattern.tmpl
@@ -16,7 +16,7 @@
 %TMPL:DEF{"pagehelp_nojavascript"}%<br />%TWISTYTOGGLE{id="pagehelp_nojavascript" mode="div" start="hide"}%<div class="foswikiHelp">%TMPL:P{"notes"}%</div>%ENDTWISTYTOGGLE%%TMPL:END%
 
 
-%TMPL:DEF{"pagetitle"}%%TMPL:P{"webaction"}% %TOPIC%%TMPL:END%
+%TMPL:DEF{"pagetitle"}%%TMPL:P{"webaction"}% [[%TOPIC%]]%TMPL:END%
 
 
 %TMPL:DEF{"searchresultsstep"}%<div class="foswikiFormStep">%TMPL:P{"searchresults"}%</div><!-- /foswikiFormStep-->
